added privacy policy

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
             <a href="index.html" class="scrollto">Home</a>
             <a href="aboutus.html" class="scrollto">About us</a>
-            <a href="#">Privacy Policy</a>
+            <a href="privacypolicy.html">Privacy Policy</a>
             <a href="#">Terms of Use</a>
           </nav>
         </div>
