--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -103,7 +103,7 @@
                   this page.
                 </p> <p>This policy is effective as of 2020-07-24</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact us at dasfsd.
+                  Privacy Policy, do not hesitate to contact us at ovitlabcompany@gmail.com.
                 </p> <p>
                 </p>
     </body>
